# divergent

./: README.md  convert_qwen_to_llama.ipynb  extra_tools.ipynb  modeling_llama.ipynb  modeling_llama_v1.py  pyproject.toml  requirements.txt  test_modeling_qwen.ipynb  wip_convert_qwen2_to_llama3.py
