[tool.poetry]
name = "divergent"
version = "0.0.1"
description = ""
authors = ["jcdiv47 <jackchai2.0@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.5"
fire = "^0.6.0"
loguru = "^0.7.2"
pytest = "^8.3.2"
sentencepiece = "^0.2.0"
accelerate = "^0.33.0"
bitsandbytes = "^0.43.3"
huggingface = "^0.0.1"
huggingface-hub = "^0.24.6"
transformers = "4.44"
torch = "^2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
